--- a/index.html
+++ b/index.html
@@ -1,75 +1,77 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>New_Year</title>
-    <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="center-wrapper">
-      <header class="header">
-        <h1 class="visually-hidden">Top Hotels</h1>
-      	<img class="header__logo" src="img/header_logo.png" width="142" height="56">
-        <p class="header__user-name">Здравствуйте, <span class="header__other-font">Дарья</span>
-        </p>
-      </header>
-
-      <section class="characteristic">
-        <h2 class="visually-hidden">Характеристика</h2>
-        <p class="characteristic__item">У вас</p>
-        <p class="characteristic__item"><span class="characteristic__view">10 </span>отзывов</p>
-        <p class="characteristic__item"><span class="characteristic__view">4 </span> бронзовых статуса</p>
-        <p class="characteristic__item"><span class="characteristic__view">7 707 </span> читателей</p>
-      </section>
-
-      <div class="banner">
-        <h2 class="banner__title">Подходит к концу 2016 год</h2>
-        <p class="banner__text">Каким он войдет в историю ваших путешествий?</p>
-      </div>
-
-      <section class="container">
-        <p class="container__text">В преддверии нового года, мы приглашаем вас поделиться своими впечатлениями о посещенных отелях.<br> Ваш опыт вновь поможет путешественникам определиться с выбором и не разочароваться в ожиданиях.</p>
-        <button class="button container__button">Пoделиться отзывом</button>
-        <p class="container__notice">* Добавляя отзыв, вы формируете свою летопись путешествий<br>Вы посетили 13 стран, 25 отелей</p>
-        <p class="container__notice">* Читатели приближают вас к получению новых статусов на проекте<br>У вас 7 707 читателей<br>Статусы: 1 золотой, 2 серебряных, 4 бронзовых</p>
-      </section>
-
-      <section class="new">
-        <div class="new__wrapper">
-          <h2 class="new__title">Новое на проекте</h2>
-          <p class="new__text">Выбирать отели стало проще!</p>
-          <p class="new__information">На сегодня мы подготовили 100 тематических подборок и рейтингов отелей, каждую неделю выходит три новых выпуска.Ищите отели в Турции для семейного отдыха? Рассматриваете подмосковные отели на новогодние канинкулы?  Заходите к нам, будет интересно;)</p>
-          <button class="button new__button">Смотреть подборки отелей</button>
-          <p class="new__notis">Не нашли нужную подборку?<br>Напишите нам, и мы ее подготовим.<br>Оставить заявку на рейтинг</p>
+    <head>
+        <meta charset="utf-8">
+        <meta content="width=device-width, initial-scale=1" name="viewport">
+        <title>New_Year</title>
+        <link rel="stylesheet" type="text/css" href="normalize.css">
+        <link href="style.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="center-wrapper">
+            <header class="header">
+                <h1 class="visually-hidden">Top Hotels</h1>
+                <img class="header__logo" src="img/header_logo.png" width="142" height="56">
+                <p class="header__user-name">Здравствуйте, <span class="header__other-font">Дарья!</span>
+                </p>
+            </header>
+            <section class="characteristic">
+                <h2 class="visually-hidden">Характеристика</h2>
+                <p class="characteristic__item">У вас</p>
+                <p class="characteristic__item"><span class="characteristic__view">10 </span>отзывов</p>
+                <p class="characteristic__item"><span class="characteristic__view">4 </span> бронзовых статуса</p>
+                <p class="characteristic__item"><span class="characteristic__view">7 707 </span> читателей</p>
+            </section>
+            <div class="banner">
+                <h2 class="banner__title">Подходит к концу 2016 год</h2>
+                <p class="banner__text">Каким он войдет в историю ваших путешествий?</p>
+            </div>
+            <section class="container">
+                <p class="container__text">В преддверии нового года, мы приглашаем вас поделиться своими впечатлениями о посещенных отелях.<br> Ваш опыт вновь поможет путешественникам определиться с выбором и не разочароваться в ожиданиях.</p>
+                <button class="button container__button">Пoделиться отзывом</button>
+                <p class="container__notice container__notice-underline"><span class="container__notice-bold">* Добавляя отзыв,</span> вы формируете свою летопись путешествий<br>Вы посетили 13 стран, 25 отелей</p>
+                <p class="container__notice"><span class="container__notice-bold">* Читатели</span> приближают вас к получению новых статусов на проекте<br>У вас 7 707 читателей<br>Статусы: 1 золотой, 2 серебряных, 4 бронзовых</p>
+            </section>
+            <section class="new">
+                <div class="new__wrapper new__wrapper1">
+                    <h2 class="new__title">Новое на проекте</h2>
+                    <p class="new__text">Выбирать отели стало проще!</p>
+                    <p class="new__information">На сегодня мы подготовили 100 тематических подборок и рейтингов отелей, каждую неделю выходит три новых выпуска.</p>
+                    <p class="new__information">Ищите отели в Турции для семейного отдыха? Рассматриваете подмосковные отели на новогодние канинкулы?</p>
+                    <p class="new__information">Заходите к нам, будет интересно;)</p>
+                    <button class="button new__button">Смотреть подборки отелей</button>
+                    <p class="new__notis new__notis--normal">Не нашли нужную подборку?</p>
+                    <p class="new__notis new__notis--opacity"> Напишите нам, и мы ее подготовим.</p>
+                    <p class="new__notis new__notis--red">Оставить заявку на рейтинг</p>
+                </div>
+                <div class="new__wrapper new__wrapper2">
+                    <img class="new__wrapper-img" src="img/winter-foto.jpg" width="240">
+                </div>
+            </section>
+            <section class="inspector">
+                <div class="inspector__wrapper">
+                    <img class="inspector__title-img" src="img/hotels-logo.png" width="160" height="12">
+                    <img class="inspector__img" src="img/GooglePlay.png" width="135" height="40">
+                    <img class="inspector__img" src="img/AppStore.png" width="135" height="40">
+                </div>
+                <div class="inspector__wrapper">
+                    <h3 class="inspector__title">Примите участие в тестировании нового приложения!</h3>
+                    <p class="inspector__text"> Вы сможете делиться информацией об отелях, находясь непосредственно на месте отдыха.</p>
+                </div>
+            </section>
+            <footer class="footer">
+                <div class="footer__social-button">
+                    <img class="footer__img" src="img/vk.png" width="32" height="32">
+                    <img class="footer__img" src="img/fb.png" width="32" height="32">
+                    <img class="footer__img" src="img/mail.png" width="32" height="32">
+                    <img class="footer__img" src="img/twitter.png" width="32" height="32">
+                    <img class="footer__img" src="img/inst.png" width="32" height="32">
+                </div>
+                <div class="footer_info">
+                    <p class="footer__text">Это письмо отправлено на адрес<span class="footer__text-bold"> boss@lightsoft.ru</span> автоматически. При возникновении любых вопросов, предложений или претензий, связанных с работой TopHotels.ru, свяжитесь с Администрацией проекта в разделе <span class="footer__text-bold">«Связь с администрацией»,</span> либо напишите нам на почту <span class="footer__text-bold">support@tophotels.ru.</span></p>
+                    <p class="footer__text-settings">Вы можете <span class="footer__text-bold">изменить настройки</span> рассылки или <span class="footer__text-bold">отписаться</span></p>
+                </div>
+            </footer>
         </div>
-      </section>
-
-      <section class="inspector">
-        <div class="inspector__wrapper">
-          <img class="inspector__title-img" src="img/hotels-logo.png" width="160" height="12">
-          <img class="inspector__img" src="img/GooglePlay.png" width="135" height="40">
-          <img class="inspector__img" src="img/AppStore.png" width="135" height="40">
-        </div>
-        <div class="inspector__wrapper">
-          <h3 class="inspector__title">Примите участие в тестировании нового приложения!</h3>
-          <p class="inspector__text"> Вы сможете делиться информацией об отелях, находясь непосредственно на месте отдыха.</p>
-        </div>
-      </section>
-
-      <footer class="footer">
-        <div class="footer__social-button">
-          <img src="img/vk.png" width="32" height="32">
-          <img src="img/fb.png" width="32" height="32">
-          <img src="img/mail.png" width="32" height="32">
-          <img src="img/twitter.png" width="32" height="32">
-          <img src="img/inst.png" width="32" height="32">
-        </div>
-        <div class="footer_info">
-          <p class="footer__text">Это письмо отправлено на адрес<span class="footer__text-bold"> boss@lightsoft.ru</span> автоматически. При возникновении любых вопросов, предложений или претензий, связанных с работой TopHotels.ru, свяжитесь с Администрацией проекта в разделе <span class="footer__text-bold">«Связь с администрацией»,</span> либо напишите нам на почту <span class="footer__text-bold">support@tophotels.ru.</span></p>
-          <p class="footer__text-settings">Вы можете <span class="footer__text-bold">изменить настройки</span> рассылки или <span class="footer__text-bold">отписаться</span></p>
-        </div>
-      </footer>
-    </div>
-  </body>
+    </body>
 </html>
